--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -52,6 +52,8 @@ jobs:
       - name: change to gh-pages
         run: |
           git fetch
+          # 看一下分支情况
+          git branch -a
           git checkout gh-pages
           git checkout master -- README.md
           cp README.md site/docs/
