--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -47,6 +47,6 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          
+          CONFIG_FILE: web/mkdocs.yml
       
         
